[package]
name = "gosumemory_helper"
version = "0.1.0"
edition = "2021"
exclude = [
    "src/main.rs",
]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.183", features = ["derive"]}
serde_json = "1.0.105"
tungstenite = "0.18.0"

